--- a/TSWTools/ToolkitForTSW.csproj
+++ b/TSWTools/ToolkitForTSW.csproj
@@ -23,12 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syroot.Windows.IO.KnownFolders" Version="1.2.3" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.1" />
-    <PackageReference Include="ThumbnailSharp" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Content Include="Images\AboutPicture.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -65,6 +59,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Syroot.Windows.IO.KnownFolders" Version="1.2.3" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\mirzaevolution\ThumbnailSharp\ThumbnailSharp\ThumbnailSharp.csproj" />
     <ProjectReference Include="..\..\RudolfLibraries\Logging.Library\Logging.Library.csproj" />
     <ProjectReference Include="..\..\RudolfLibraries\Styles.Library\Styles.Library.csproj" />
   </ItemGroup>
